--- a/main/static/css/map.css
+++ b/main/static/css/map.css
@@ -217,8 +217,8 @@ main {
     position: absolute;
     top: 15px;
     right: 15px;
-    width: 25px; /* Уменьшенные размеры для маленьких экранов */
-    height: 25px;
+    width: 30px; 
+    height: 30px;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -226,7 +226,7 @@ main {
     z-index: 3;
 }
 
-#close-block-two{
+#close-block-two img {
     width: 100%; 
     height: 100%; 
     object-fit: contain; 
@@ -591,5 +591,14 @@ main {
         outline: 0px solid var(--color-primary);
         outline-offset: 0px;
     }
+
+    #overlaytwo #close-block-two {
+        position: absolute;
+        width: 15px; 
+        height: 15px;
+        object-fit: contain; 
+    }
+    
+
 
 }
