--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -37,7 +37,8 @@
         <div id="description">
           <p>
             <b>The game <strong>"The Quest"</strong> is still in development.</b><br>
-            Subscribe to our <a href="/error_page">social networks</a> to follow the news.<br>
+            Subscribe to our <a href="#" id="social-networks-link">social networks</a>
+            to follow the news.<br>
           </p>
         </div>
         <div id="loading">
