--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -56,14 +56,14 @@
                         <a href="https://t.me/thequestgames" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-tg-hover.png" alt="The Quest Telegram">
                         </a>
-                        <a href="/map" class="social-item" target="_blank">
-                            <img class="social-img" src="/static/img/social-inst-hover.png" alt="The Quest Instagram">
-                        </a>
-                        <a href="/map" class="social-item" target="_blank">
+                        <a href="https://discord.gg/Hx3xZu622x" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-ds-hover.png" alt="The Quest Discord">
                         </a>
                         <a href="/map" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest X">
+                        </a>
+                        <a href="/map" class="social-item" target="_blank">
+                            <img class="social-img" src="/static/img/social-inst-hover.png" alt="The Quest Instagram">
                         </a>
                     </div>
                     <div id="contact">
