--- a/main/static/css/header.css
+++ b/main/static/css/header.css
@@ -146,15 +146,16 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 15, 17, 0.486);
+    z-index: 9999; /* Очень высокий z-index */
 }
 
 #content-block {
-    position: fixed;
+    position: relative;
     width: 80%; 
     max-width: 950px;
     height: auto; 
     background-color: rgb(0, 0, 0); 
-    z-index: 2;
+    z-index: 10000;
     border: 1px solid #2F2F2F;
     box-sizing: border-box;
     border-radius: 10px;
