--- a/main/templates/loading.html
+++ b/main/templates/loading.html
@@ -1,14 +1,16 @@
+{% load static %} 
+
 {% block title %}
 {% endblock %}
 
 {% block css %}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/loading.css') }}">
+<link rel="stylesheet" href="{% static 'css/loading.css' %}">
 {% endblock %}
 
 {% block body %}
   <main class="loading-container">
     <div class="logo">
-      <img src="/static/img/thequestlogotype.png" alt="The Quest Logo">
+      <img src="{% static 'img/TheQuestLogoLabel.png' %}" alt="The Quest Logo">
     </div>
     <div class="loader">
       <div class="circle" id="circle1"></div>
@@ -17,11 +19,12 @@
     </div>
   </main>
 
-  <script src="{{ url_for('static', filename='js/loading.js') }}"></script>
+  <script src="{% static 'js/loading.js' %}"></script>
   <script>
-    // Функция для редиректа на главную страницу после завершения загрузки
+    // Редирект на главную страницу
     setTimeout(function() {
-      window.location.href = "/map";  // Укажите нужный маршрут
-    }, 2000);  // Ожидание 2 секунды (можно изменить в зависимости от продолжительности анимации)
+      window.location.href = "/map";
+    }, 2000); // Ожидание 2 секунды
   </script>
+  
 {% endblock %}
