--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -16,8 +16,8 @@
   <link rel="icon" type="image/png" href="/static/img/logoquest.png">
   {% block css %}
   {% endblock %}
-  <link rel="stylesheet" href="{% static 'css/header.css' %}">
-  <link rel="stylesheet" href="{% static 'css/navigation.css' %}">
+  <link rel="stylesheet" href="{% static 'css/header.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/navigation.css' %}" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
