--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block css %}
-  <link rel="stylesheet" href="{% static 'css/info_center.css' %}">
-  <link rel="stylesheet" href="{% static 'css/card.css' %}">
+  <link rel="stylesheet" href="{% static 'css/info_center.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/card.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
