--- a/main/templates/loading.html
+++ b/main/templates/loading.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/loading.css' %}">
+<link rel="stylesheet" href="{% static 'css/loading.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
