--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block css %}
-  <link rel="stylesheet" href="{% static 'css/map.css' %}">
-  <link rel="stylesheet" href="{% static 'css/header.css' %}">
+  <link rel="stylesheet" href="{% static 'css/map.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/header.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
