--- a/main/templates/news_detail.html
+++ b/main/templates/news_detail.html
@@ -4,7 +4,7 @@
 {% block title %}{{ news_item.title }}{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/news_detail.css' %}">
+<link rel="stylesheet" href="{% static 'css/news_detail.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
