--- a/main/templates/privacy_policy.html
+++ b/main/templates/privacy_policy.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/privacy_policy.css' %}">
+<link rel="stylesheet" href="{% static 'css/privacy_policy.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
