--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'css/profile.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
