--- a/main/templates/error_page.html
+++ b/main/templates/error_page.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block css %}
-  <link rel="stylesheet" href="{% static 'css/error_page.css' %}">
+  <link rel="stylesheet" href="{% static 'css/error_page.css' %}" type="text/css">
 {% endblock %}
 
 {% block body %}
