--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -19,6 +19,24 @@
   </div>
 
   
+  <!-- Блок QUESTS -->
+  <div class="block quests">
+    <div class="content-container">
+      <div class="image-container">
+        <img src="{% static 'img/BlockPhonewithmap.png' %}" alt="Phone displaying map">
+      </div>
+      <div class="text-container">
+        <h2 class="yellow">QUESTS</h2>
+        <h1 class="yellow">Quests around the world!</h1>
+        <p>Lorem Ipsum has been the industry's standard dummy text since the 1500s, when an unknown printer took a galley of type and scrambled it...</p>
+        <div class="hashtags">
+          <p>Physical activity</p>
+          <p>Worldwide</p>
+          <p>Social interactions</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Блок FRIENDS -->
   <div class="block friends">
