--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -95,9 +95,9 @@
                           <p class="event-date">{{ event.date|date:"d F Y H:i" }}</p>
                           <h2 class="event-title">{{ event.title|safe }}</h2>
                           <div class="news-buttons">
-                              <button class="event-button small" onclick="shareNews('{{ request.build_absolute_uri(event.get_absolute_url) }}')">
-                                  <img src="{% static 'img/icon-share.svg' %}" alt="Share">
-                              </button>
+                            <button class="news-button small" onclick="shareNews('{{ event.full_url }}')">
+                                <img src="{% static 'img/icon-share.svg' %}" alt="Share">
+                            </button>   
                               <a href="#" class="news-button open">Open</a>
                           </div>
                       </div>
@@ -130,9 +130,9 @@
                   <p class="update-date">{{ update.published_date }}</p>
                   <h2 class="update-title">{{ update.title|safe }}</h2>
                   <div class="news-buttons">
-                      <button class="event-button small" onclick="shareNews('{{ request.build_absolute_uri(update.get_absolute_url) }}')">
-                          <img src="{% static 'img/icon-share.svg' %}" alt="Share">
-                      </button>
+                    <button class="news-button small" onclick="shareNews('{{ update.full_url }}')">
+                        <img src="{% static 'img/icon-share.svg' %}" alt="Share">
+                    </button>   
                       <!-- Заглушка вместо ссылки -->
                       <a href="#" class="news-button open">Open</a>
                   </div>
