--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -149,5 +149,7 @@
     </div>
   <script src="{% static 'js/info_center.js' %}"></script>
   <script src="{% static 'js/viewport.js' %}"></script>
+  <script src="{% static 'js/share.js' %}"></script>
+
 </main>
 {% endblock %}
