--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -59,7 +59,7 @@
     </div>
     <div class="privacy-block">
       <a href="/ssse">Job openings</a>
-      <a href="/privacy_policy/">Privacy Policy</a>
+      <a href="/privacy_policy/">Privacy & Policy</a>
     </div>
   </footer>
 <script src="{% static 'js/script.js' %}"></script>
