--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -33,11 +33,11 @@
             <img src="/static/img/language-icon.svg" class="icon" alt="Language Icon">
             <span class="current-language">Select language</span>
             <img src="/static/img/arrow-icon.svg" class="arrow-icon" alt="Arrow Icon">
-            <ul class="language-menu" role="menu" hidden>
+            <ul class="language-menu" role="menu">
                 <li data-lang="en" role="menuitem" tabindex="0">English</li>
                 <li data-lang="ru" role="menuitem" tabindex="0">Русский</li>
             </ul>
-        </div>
+        </div>         
     
           <button class="our-socials-btn socials">OUR SOCIALS</button>
           <div id="overlay" style="display: none;">
