--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -59,4 +59,5 @@
 </main>
 
 <script src="{% static 'js/profile.js' %}"></script>
+<script src="{% static 'js/language-switch.js' %}"></script>
 {% endblock %}
