--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -27,7 +27,7 @@
       </div>
       <div class="text-container">
         <h2 class="yellow">QUESTS</h2>
-        <h1 class="yellow" id="quests-title">Quests around the world!</h1>
+        <h1 class="yellow">Quests around the world!</h1>
         <p>Lorem Ipsum has been the industry's standard dummy text since the 1500s, when an unknown printer took a galley of type and scrambled it...</p>
         <div class="hashtags">
           <p>Physical activity</p>
@@ -43,7 +43,7 @@
     <div class="content-container">
       <div class="text-container">
         <h2 class="green">FRIENDS</h2>
-        <h1 class="green" id="friends-title">Meet with friends and play together!</h1>
+        <h1 class="green">Meet with friends and play together!</h1>
         <p>Discover the secrets and hidden places you never knew existed. Join others in exciting quests for unforgettable experiences...</p>
         <div class="hashtags">
           <p>Adventure</p>
