--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -63,6 +63,9 @@
                         <a href="/map" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest X">
                         </a>
+                        <a href="/map" class="social-item" target="_blank">
+                            <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest Facebook">
+                        </a>
                     </div>
                     <div id="contact">
                         <hr id="line">
