--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -48,23 +48,26 @@
                         <p>Our Socials</p>
                     </div>
                     <div id="socials">
-                        <a href="/map" class="social-item" target="_blank">
+                        <a href="https://www.tiktok.com/@thequestgame?_t=8sJewdSN5QP&_r=1" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-tt-hover.png" alt="The Quest Tiktok">
                         </a>
-                        <a href="https://t.me/thequestgames" class="social-item" target="_blank">
+                        <a href="https://t.me/thequestapp" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-tg-hover.png" alt="The Quest Telegram">
                         </a>
-                        <a href="/map" class="social-item" target="_blank">
+                        <a href="https://www.instagram.com/thequest_app/" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-inst-hover.png" alt="The Quest Instagram">
                         </a>
                         <a href="https://discord.gg/Hx3xZu622x" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-ds-hover.png" alt="The Quest Discord">
                         </a>
-                        <a href="/map" class="social-item" target="_blank">
+                        <a href="https://x.com/AppTheQuest" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest X">
                         </a>
-                        <a href="/map" class="social-item" target="_blank">
-                            <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest Facebook">
+                        <a href="https://www.facebook.com/profile.php?id=61571049321450" class="social-item" target="_blank">
+                            <img class="social-img" src="/static/img/social-fb-hover.png" alt="The Quest Facebook">
+                        </a>
+                        <a href="https://www.youtube.com/@TheQuestApp" class="social-item" target="_blank">
+                            <img class="social-img" src="/static/img/social-youtube-hover.png" alt="The Quest YouTube">
                         </a>
                     </div>
                     <div id="contact">
