--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -76,7 +76,7 @@
                         <hr id="line">
                     </div>
                     <div id="send-msg">
-                        <button type="button" id="send-btn">Send Message</button>
+                        <button type="button" id="send-btn"><a href="app.thequest@gmail.com">Send Message</a></button>
                     </div>
                 </div>
             </div>
