--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -76,7 +76,9 @@
                         <hr id="line">
                     </div>
                     <div id="send-msg">
-                        <button type="button" id="send-btn"><a href="app.thequest@gmail.com">Send Message</a></button>
+                        <input type="email" placeholder="app.thequest@gmail.com" id="email" name="email">
+                            <button type="button" id="send-btn">Send Message</button>
+                        </input>
                     </div>
                 </div>
             </div>
