--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -76,9 +76,9 @@
                         <hr id="line">
                     </div>
                     <div id="send-msg">
-                        <input type="email" placeholder="app.thequest@gmail.com" id="email" name="email">
+                        <a href="mailto:app.thequest@gmail.com" alt="Mail The Quest">
                             <button type="button" id="send-btn">Send Message</button>
-                        </input>
+                        </a>
                     </div>
                 </div>
             </div>
