--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -54,7 +54,7 @@
     <div class="fixed-text-block">
       <p class="first-text">The Quest - it's just a game.</p>
       <p class="second-text">
-        For investment inquiries, <br> <input type="email" placeholder="user@gmail.com" id="email" name="email">please reach out</input> to us.
+        For investment inquiries, <br> <a href="mailto:app.thequest@gmail.com" alt="Mail The Quest">please reach out</a> to us.
       </p>
     </div>
     <div class="privacy-block">
