--- a/main/templates/news_detail.html
+++ b/main/templates/news_detail.html
@@ -26,7 +26,7 @@
 
     <!-- Основной текст новости -->
     <div class="news__content">
-      {{ news_item.description|linebreaks |striptags}}
+      {{ news_item.description|linebreaks |safe}}
     </div>
   </div>
 </main>
