--- a/main/templates/privacy_policy.html
+++ b/main/templates/privacy_policy.html
@@ -10,23 +10,7 @@
   <section class="privacy-detail">
     <h1 class="privacy-title">The Quest <br> Privacy and Policy</h1>
     <div class="privacy-content">
-      <p>
-        Adventurers, it’s time to celebrate! The official website for «The Quest» is live, marking the very first step in building something extraordinary. This is where your journey begins, and we’re thrilled to share it with you.
-      </p>
-      <p>
-        Here’s what you can explore:
-      </p>
-      <ul>
-        <li><strong>Home:</strong> All the latest news, updates, events, and insights into the game.</li>
-        <li><strong>Map:</strong> Discover the key locations of the game and find quick links to download «The Quest» on Google Play and the App Store.</li>
-        <li><strong>Profile:</strong> Detailed information about «The Quest»—from its characters to its unique features.</li>
-      </ul>
-      <p>
-        This website is your hub for everything «The Quest». It’s designed to keep you connected, informed, and ready for every update or event in the game. We want you to feel like part of the journey as our world evolves and grows.
-      </p>
-      <p>
-        This is just the beginning, and we’re excited to have you with us. The adventure starts here—stay tuned for more updates, surprises, and exclusive content.
-      </p>
+      <strong>The necessary information will be here very soon!</strong>
     </div>
   </section>
 </main>
