--- a/main/templates/privacy_policy.html
+++ b/main/templates/privacy_policy.html
@@ -10,7 +10,7 @@
   <section class="privacy-detail">
     <h1 class="privacy-title">The Quest <br> Privacy and Policy</h1>
     <div class="privacy-content">
-      <strong>The necessary information will be here very soon!</strong>
+      The necessary information will be here very soon!
     </div>
   </section>
 </main>
