--- a/main/static/css/map.css
+++ b/main/static/css/map.css
@@ -607,6 +607,12 @@ main {
         object-fit: contain; 
     }
     
+}
 
+@media (max-width: 400px) {
+
+    .privacy-policy {
+        padding: 0 40px;
+    }
 
 }
