--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -55,7 +55,7 @@
                             <img src="{% static 'img/oursocials.png' %}" alt="">
                         </a>
                     </div>                            
-                    <div class="news-content" style="background-image: url('');">
+                    <div class="news-content socials-bg">
                         <p class="news-date"></p>
                         <h2 class="news-title"></h2>
                         <div class="news-buttons">
@@ -66,6 +66,8 @@
                         </div>
                     </div>
                 </div>
+                
+                
 
                 {% if news_list %}
                     {% for news in news_list %}
