--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -56,13 +56,13 @@
                         </a>
                     </div>                            
                     <div class="news-content socials-bg">
-                        <p class="news-date"></p>
-                        <h2 class="news-title">Stay connected with us! Follow our social media for the latest updates and exclusive content!</h2>
+                        <p class="news-date">Stay connected with us!</p>
+                        <h2 class="news-title">Follow our social media for the latest updates and exclusive content!</h2>
                         <div class="news-buttons">
-                            <button class="news-button small" onclick="shareNews('')">
+                            <button class="socials-button small" onclick="shareNews('')">
                                 <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                             </button>                                    
-                            <a href="#" class="news-button open">Open</a>
+                            <a href="#" class="socials-button open">Open</a>
                         </div>
                     </div>
                 </div>
