--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -57,7 +57,7 @@
                     </div>                            
                     <div class="news-content socials-bg">
                         <p class="news-date">Stay connected with us!</p>
-                        <h2 class="news-title">Follow our social media for the latest updates and exclusive content!</h2>
+                        <h2 class="news-title">Follow us for updates and exclusive content!</h2>
                         <div class="news-buttons">
                             <button class="socials-button small" onclick="shareNews('')">
                                 <img src="{% static 'img/icon-share.svg' %}" alt="Share">
