--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -62,7 +62,7 @@
                             <button class="socials-button small" onclick="shareNews('')">
                                 <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                             </button>                                    
-                            <a href="#" class="socials-button open">Open</a>
+                            <a href="#" class="socials-button open">Subscribe</a>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                                     <button class="news-button small" onclick="shareNews('{{ news.full_url }}')">
                                         <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                                     </button>                                    
-                                    <a href="{% url 'news_detail' news.pk %}" class="news-button open">Subscribe</a>
+                                    <a href="{% url 'news_detail' news.pk %}" class="news-button open"></a>
                                 </div>
                             </div>
                         </div>
