--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -84,7 +84,7 @@
                                     <button class="news-button small" onclick="shareNews('{{ news.full_url }}')">
                                         <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                                     </button>                                    
-                                    <a href="{% url 'news_detail' news.pk %}" class="news-button open"></a>
+                                    <a href="{% url 'news_detail' news.pk %}" class="news-button open">Open</a>
                                 </div>
                             </div>
                         </div>
