--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -59,7 +59,7 @@
                         <p class="news-date">Stay connected with us!</p>
                         <h2 class="news-title">Follow us for updates and exclusive content!</h2>
                         <div class="news-buttons">
-                            <button class="socials-button small" onclick="shareNews('')">
+                            <button class="news-button small" onclick="shareNews('')">
                                 <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                             </button>                                    
                             <a href="#" class="socials-button open">Subscribe</a>
