--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -51,7 +51,7 @@
 
                 <div class="news-card">
                     <div class="news-image">
-                        <a href="#">
+                        <a href="{% url 'socials_page' %}">
                             <img src="{% static 'img/oursocials.png' %}" alt="">
                         </a>
                     </div>                            
@@ -59,10 +59,10 @@
                         <p class="news-date">Stay connected with us!</p>
                         <h2 class="news-title">Follow us for updates and exclusive content!</h2>
                         <div class="news-buttons">
-                            <button class="news-button small" onclick="shareNews('')">
+                            <button class="news-button small" onclick="shareNews('{{ socials_url }}')">
                                 <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                             </button>                                    
-                            <a href="#" class="socials-button open">Subscribe</a>
+                            <a href="{% url 'socials_page' %}" class="socials-button open">Subscribe</a>
                         </div>
                     </div>
                 </div>
