--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -7,10 +7,12 @@
 }
 
 body, html {
+  background: url(/static/img/smooth-purple.png) no-repeat center center/cover;
   background-color: var(--color-background);
   margin: 0;
   padding: 0;
   font-family: var(--font-family);
+  height: 100vh;
 }
 
 #content-block {
