--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -15,6 +15,11 @@ body, html {
   height: 100vh;
 }
 
+::selection {
+  background: transparent; 
+  color: #FF4E47; 
+}
+
 #content-block {
   width: 80%;
   max-width: 950px;
