--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -7,7 +7,7 @@
 }
 
 body, html {
-  background: url(/static/img/smooth-purple.png) no-repeat center center/cover;
+  background-image: url(/static/img/smooth-purple.png) no-repeat center center/cover;
   background-color: var(--color-background);
   margin: 0;
   padding: 0;
@@ -20,94 +20,10 @@ body, html {
   color: #FF4E47; 
 }
 
-#content-block {
-  width: 80%;
-  max-width: 950px;
-  margin: 50px auto;
-  padding: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  overflow-y: auto;
-}
-
-#block {
-  width: 100%;
-  text-align: center;
-}
-
-#main-text p {
-  font-size: 98px;
-  font-weight: 800;
-  font-style: italic;
-  color: transparent;
-  -webkit-text-stroke: 3px var(--primary-color);
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-#socials {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.social-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 150px;
-  height: auto;
-  overflow: hidden;
-}
-
-.social-img {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-  filter: grayscale(100%);
-  transition: filter 0.3s ease, transform 0.3s ease;
-}
-
-.social-item:hover .social-img {
-  filter: grayscale(0%);
-  transform: scale(1.1);
-}
-
-#contact {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  color: #4B4B4B;
-}
-
-#line {
-  width: 210px;
-  border: none;
-  border-top: 1px solid #4B4B4B;
-  margin: 0 10px;
-}
-
-#text {
-  white-space: nowrap;
-}
-
-#send-msg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#send-btn {
-  width: 320px;
-  height: 50px;
-  background-color: var(--primary-color);
-  color: #111;
-  font-size: 19px;
-  font-weight: bold;
-  cursor: pointer;
+.centered-block {
+  padding: 32px 78px;
+  border-radius: 40px;
+  background-image: url(/static/img/socials-bg.png) no-repeat center center/cover;
+  opacity: 0.5;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 }
