--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -7,7 +7,7 @@
 }
 
 body, html {
-  background-image: url(/static/img/smooth-purple.png) no-repeat center center/cover;
+  background: url(/static/img/smooth-purple.png) no-repeat center center/cover;
   background-color: var(--color-background);
   margin: 0;
   padding: 0;
@@ -23,7 +23,7 @@ body, html {
 .centered-block {
   padding: 32px 78px;
   border-radius: 40px;
-  background-image: url(/static/img/socials-bg.png) no-repeat center center/cover;
+  background: url(/static/img/socials-bg.png) no-repeat center center/cover;
   opacity: 0.5;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 }
