--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -7,7 +7,7 @@
 }
 
 body, html {
-  background: url(/static/img/smooth-purple.png) no-repeat center center/cover;
+  background: url(/static/img/smooth-purple.jpg) no-repeat center center/cover;
   background-color: var(--color-background);
   margin: 0;
   padding: 0;
@@ -18,6 +18,10 @@ body, html {
 ::selection {
   background: transparent; 
   color: #FF4E47; 
+}
+
+main{
+  padding: 250px;
 }
 
 .centered-block {
